SERVER-51170 Ensure database refreshes are performed after ShardingState initialization