src/mongo/db/s/sharding_initialization_mongod.cpp
@@ -278,8 +278,6 @@ void ShardingInitializationMongoD::initializeShardingEnvironmentOnShardServer(
     TransactionCoordinatorService::get(opCtx)->onShardingInitialization(
         opCtx, isReplSet && isStandaloneOrPrimary);
 
-    Grid::get(opCtx)->setShardingInitialized();
-
     LOGV2(22071,
           "Finished initializing sharding components for {memberState} node.",
           "Finished initializing sharding components",
@@ -460,6 +458,7 @@ void ShardingInitializationMongoD::initializeFromShardIdentity(
     } catch (const DBException& ex) {
         shardingState->setInitialized(ex.toStatus());
     }
+    Grid::get(opCtx)->setShardingInitialized();
 }
 
 void ShardingInitializationMongoD::updateShardIdentityConfigString(
